# waifufy

./: .gitignore  CMakeLists.txt  README.md  input_art.txt  input_code.cpp  output_code.cpp  output_code.heatmap.txt  output_code_fixed.cpp  reference.md
helper/: README.md  img2grid.py
include/: waifufy_core.hpp
src/: main.cpp  waifufy_core.cpp
